--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,13 @@
   color: white;
 }
 
+
+.description{
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+}
+
 /*=====================================================
  snackbar after sign up
 =======================================================*/
