--- a/public/user.css
+++ b/public/user.css
@@ -7,7 +7,9 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  /* background: #c1bdba; */
+  /* background: #ff70075c; */
+  background:#c1bdba9c;
   font-family: "Titillium Web", sans-serif;
 }
 
@@ -23,17 +25,21 @@ a:hover {
 .form {
   /* background: rgba(19, 35, 47, 0.9); */
   background: rgba(4, 2, 1, 0.88);
+  /* background: rgba(165, 7, 7, 0.9); */
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  border-radius: 45px;
 }
 
 .tab-group {
   list-style: none;
   padding: 0;
   margin: 0 0 40px 0;
+  box-shadow: inset 0 0 10px 0px black;
+
 }
 .tab-group:after {
   content: "";
@@ -52,15 +58,20 @@ a:hover {
   text-align: center;
   cursor: pointer;
   transition: 0.5s ease;
+  box-shadow: inset 0 0 10px 0px black;
 }
 .tab-group li a:hover {
-  background: #179b77;
-  color: #ffffff;
+  /* background: #179b77;
+  color: #ffffff; */
+  background:#980201;
+  color: white;
 }
 .tab-group .active a {
   /* background: #1ab188; */
-  background: #ff6b24d6;
-  color: #ffffff;
+  /* background: #ff6b24d6; */
+  background: #dc5e21;
+    color: #ffffff;
+    /* box-shadow: inset 0 0 10px 0px black; */
 }
 
 .tab-content > div:last-child {
@@ -165,9 +176,13 @@ textarea {
   color: #ffffff;
   transition: all 0.5s ease;
   -webkit-appearance: none;
+  box-shadow: inset 0 0 10px 0px black;
+
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  box-shadow: inset 0 0 10px 0px black;
+  background:#980201;
+  /* background: #179b77; */
 }
 
 .button-block {
