--- a/public/style.css
+++ b/public/style.css
@@ -101,7 +101,7 @@ tr:nth-child(odd) {
 
 .disable-join {
   text-decoration: line-through;
-  text-decoration-color: red;
+  text-decoration-color: black;
   pointer-events: none;
   cursor: default;
 }
@@ -148,6 +148,7 @@ tr:nth-child(odd) {
   padding-bottom: 15px;
   cursor: pointer;
   color: #bd4902;
+  text-align: center;
   font: bold 42px Helvetica, Arial, Sans-Serif;
   text-shadow: 1px 1px #48362f, 2px 2px #48362f, 3px 3px #48362f;
   -webkit-transition: all 0.12s ease-out;
@@ -181,6 +182,7 @@ tr:nth-child(odd) {
   display: flex;
   /* justify-content: space-around; */
   justify-content: center;
+  /* text-align: center; */
 }
 
 .search-icon,
@@ -191,10 +193,17 @@ tr:nth-child(odd) {
   transition: 0.6s ease-out;
 }
 
+.fa-envelope{
+  -webkit-transition: 0.6s ease-out;
+  -moz-transition: 0.6s ease-out;
+  transition: 0.6s ease-out;
+}
+
 .search-icon:hover,
-.post-icon:hover {
-  -webkit-transform: rotateZ(360deg);
-  -moz-transform: rotateZ(360deg);
+.post-icon:hover,
+.fa-envelope:hover{
+  -webkit-transform: rotateY(360deg);
+  -moz-transform: rotateY(360deg);
   transform: rotateY(360deg);
 }
 
