--- a/public/user.css
+++ b/public/user.css
@@ -24,13 +24,15 @@ a:hover {
 
 .form {
   /* background: rgba(19, 35, 47, 0.9); */
-  background: rgba(4, 2, 1, 0.88);
+  /* background: rgba(4, 2, 1, 0.88); */
+  background: rgb(101, 6, 5);
   /* background: rgba(165, 7, 7, 0.9); */
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
   border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  /* box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3); */
+  box-shadow: 0 4px 18px 5px rgb(0, 0, 0);
   border-radius: 45px;
 }
 
@@ -50,8 +52,10 @@ a:hover {
   display: block;
   text-decoration: none;
   padding: 15px;
-  background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
+  /* background: rgba(160, 179, 176, 0.25);
+  color: #a0b3b0; */
+  background: rgba(246, 247, 247, 0.84);
+    color: #000000;
   font-size: 20px;
   float: left;
   width: 50%;
@@ -63,7 +67,8 @@ a:hover {
 .tab-group li a:hover {
   /* background: #179b77;
   color: #ffffff; */
-  background:#980201;
+  /* background:#980201; */
+  background: #dc5e21;
   color: white;
 }
 .tab-group .active a {
@@ -125,14 +130,16 @@ input, textarea {
   background-image: none;
   border: 1px solid #a0b3b0;
   color: #ffffff;
-  border-radius: 0;
+  /* border-radius: 0; */
+  border-radius: 9px;
   transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
 input:focus, textarea:focus {
   outline: 0;
   /* border-color: #1ab188; */
   /* box-shadow: -1px -1px 8px #da5e22; */
-  box-shadow: 0 0 8px #da5e22;;
+  /* box-shadow: 0 0 8px #da5e22;; */
+  box-shadow: 0 0 14px 2px #ffffff;
 }
 
 textarea {
@@ -165,7 +172,8 @@ textarea {
 .button {
   border: 0;
   outline: none;
-  border-radius: 0;
+  /* border-radius: 0; */
+  border-radius: 7px;
   padding: 15px 0;
   font-size: 2rem;
   font-weight: 600;
@@ -173,6 +181,7 @@ textarea {
   letter-spacing: 0.1em;
   /* background: #1ab188; */
   background: #ff6b24d6;
+  /* background: rgba(246, 247, 247, 0.84); */
   color: #ffffff;
   transition: all 0.5s ease;
   -webkit-appearance: none;
@@ -181,7 +190,10 @@ textarea {
 }
 .button:hover, .button:focus {
   box-shadow: inset 0 0 10px 0px black;
-  background:#980201;
+  /* background:#980201; */
+  /* background: #dc5e21; */
+  background: rgba(246, 247, 247, 0.84);
+  color:black;
   /* background: #179b77; */
 }
 
