--- a/public/style.css
+++ b/public/style.css
@@ -79,6 +79,10 @@ tr:nth-child(odd) {
   color: #bd4902;
 }
 
+.refresh{
+  cursor: pointer;
+}
+
 .post {
   box-shadow: 0px 0px 12px 0px black;
   padding: 10px;
@@ -166,6 +170,7 @@ tr:nth-child(odd) {
   /* color: #bd4902; */
   color: #980201;
   font-weight: bold;
+  display: inline-block;
   /* text-align: center; */
 }
 
