--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@
 #pswdLogInError {
   float: right;
   color: white;
+  text-align: left;
 }
 
 .logo {
@@ -80,8 +81,15 @@ tr:nth-child(odd) {
 }
 
 .refresh{
+  -webkit-animation:spin 4s linear infinite;
+  -moz-animation:spin 4s linear infinite;
+  animation:spin 4s linear infinite;
   cursor: pointer;
 }
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 .post {
   box-shadow: 0px 0px 12px 0px black;
@@ -246,7 +254,7 @@ tr:nth-child(odd) {
   padding: 16px;
   z-index: 1;
   font-size: 17px;
-  margin-left: 110px;
+  /* margin-left: 110px; */
   margin-top: 18px;
   box-shadow: 0 0 11px 5px black;
 }
