--- a/public/user.css
+++ b/public/user.css
@@ -1,4 +1,6 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -9,7 +11,7 @@ html {
 body {
   /* background: #c1bdba; */
   /* background: #ff70075c; */
-  background:#c1bdba9c;
+  background: #c1bdba9c;
   font-family: "Titillium Web", sans-serif;
 }
 
@@ -18,6 +20,7 @@ a {
   color: #1ab188;
   transition: 0.5s ease;
 }
+
 a:hover {
   color: #179b77;
 }
@@ -41,13 +44,14 @@ a:hover {
   padding: 0;
   margin: 0 0 40px 0;
   box-shadow: inset 0 0 10px 0px black;
-
 }
+
 .tab-group:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .tab-group li a {
   display: block;
   text-decoration: none;
@@ -55,7 +59,7 @@ a:hover {
   /* background: rgba(160, 179, 176, 0.25);
   color: #a0b3b0; */
   background: rgba(246, 247, 247, 0.84);
-    color: #000000;
+  color: #000000;
   font-size: 20px;
   float: left;
   width: 50%;
@@ -64,6 +68,7 @@ a:hover {
   transition: 0.5s ease;
   box-shadow: inset 0 0 10px 0px black;
 }
+
 .tab-group li a:hover {
   /* background: #179b77;
   color: #ffffff; */
@@ -71,15 +76,16 @@ a:hover {
   background: #dc5e21;
   color: white;
 }
+
 .tab-group .active a {
   /* background: #1ab188; */
   /* background: #ff6b24d6; */
   background: #dc5e21;
-    color: #ffffff;
-    /* box-shadow: inset 0 0 10px 0px black; */
+  color: #ffffff;
+  /* box-shadow: inset 0 0 10px 0px black; */
 }
 
-.tab-content > div:last-child {
+.tab-content>div:last-child {
   display: none;
 }
 
@@ -101,17 +107,20 @@ label {
   pointer-events: none;
   font-size: 22px;
 }
+
 label .req {
   margin: 2px;
   /* color: #1ab188; */
-  color:#ff6b24d6;
+  color: #ff6b24d6;
 }
 
 label.active {
   transform: translateY(-24px);
   left: 2px;
   font-size: 14px;
+  top: -3px;
 }
+
 label.active .req {
   opacity: 0;
 }
@@ -120,7 +129,9 @@ label.highlight {
   color: #ffffff;
 }
 
-input, textarea {
+input,
+textarea {
+  /* margin-bottom: 8px; */
   font-size: 22px;
   display: block;
   width: 100%;
@@ -134,7 +145,9 @@ input, textarea {
   border-radius: 9px;
   transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
-input:focus, textarea:focus {
+
+input:focus,
+textarea:focus {
   outline: 0;
   /* border-color: #1ab188; */
   /* box-shadow: -1px -1px 8px #da5e22; */
@@ -157,15 +170,15 @@ textarea {
   display: table;
   clear: both;
 }
-.top-row > div {
-  /* float: left; */
-  width: 48%;
-  /* margin-right: 4%; */
 
-  margin: auto;
-  margin-bottom: 27px;
+.top-row>div {
+  width: 48%;
+  /* margin: auto; */
+  margin-right: 6px;
+  display: inline-grid;
 }
-.top-row > div:last-child {
+
+.top-row>div:last-child {
   margin: 0;
 }
 
@@ -186,14 +199,15 @@ textarea {
   transition: all 0.5s ease;
   -webkit-appearance: none;
   box-shadow: inset 0 0 10px 0px black;
-
 }
-.button:hover, .button:focus {
+
+.button:hover,
+.button:focus {
   box-shadow: inset 0 0 10px 0px black;
   /* background:#980201; */
   /* background: #dc5e21; */
   background: rgba(246, 247, 247, 0.84);
-  color:black;
+  color: black;
   /* background: #179b77; */
 }
 
@@ -206,4 +220,3 @@ textarea {
   margin-top: -20px;
   text-align: right;
 }
-
